Working on smth notebook with the function that we will need

--- a/searchclient/searchclient_python/searchclient/smth.ipynb
+++ b/searchclient/searchclient_python/searchclient/smth.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan0 = [[('AgentAt0', (1, 7)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 6)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 5)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 4)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 3)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 2)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 1)), ('BoxAtA', (2, 10))], [('AgentAt0', (2, 1)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 1)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 2)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 3)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 4)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 5)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 6)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 7)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 8)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 9)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 10)), ('BoxAtA', (2, 10))], [('AgentAt0', (2, 10)), ('BoxAtA', (1, 10))]]\n",
+    "plan0 = [[('AgentAt0', (2, 6)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 6)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 5)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 4)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 3)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 2)), ('BoxAtA', (2, 10))], [('AgentAt0', (1, 1)), ('BoxAtA', (2, 10))], [('AgentAt0', (2, 1)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 1)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 2)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 3)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 4)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 5)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 6)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 7)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 8)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 9)), ('BoxAtA', (2, 10))], [('AgentAt0', (3, 10)), ('BoxAtA', (2, 10))], [('AgentAt0', (2, 10)), ('BoxAtA', (1, 10))]]\n",
     "plan1 = [[('AgentAt0', (1, 7)), ('BoxAtB', (4, 1))], [('AgentAt0', (1, 6)), ('BoxAtB', (4, 1))], [('AgentAt0', (5, 6)), ('BoxAtB', (4, 1))], [('AgentAt0', (5, 7)), ('BoxAtB', (4, 1))], [('AgentAt0', (5, 8)), ('BoxAtB', (4, 1))], [('AgentAt0', (5, 9)), ('BoxAtB', (4, 1))], [('AgentAt0', (5, 10)), ('BoxAtB', (4, 1))], [('AgentAt0', (4, 10)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 10)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 9)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 8)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 7)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 6)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 5)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 4)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 3)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 2)), ('BoxAtB', (4, 1))], [('AgentAt0', (3, 1)), ('BoxAtB', (4, 1))], [('AgentAt0', (4, 1)), ('BoxAtB', (5, 1))], [('AgentAt0', (4, 1)), ('BoxAtB', (5, 2))]]\n",
     "plans = [plan0, plan1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from state import State, Constraint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,39 +49,133 @@
     "    agent_i = plan[0][0][0]     # AgentAt0\n",
     "    \n",
     "    other_plans = [lst for lst in plan_list if lst is not plan]\n",
-    "    conflicts = []\n",
+    "    constraints = []\n",
     "\n",
     "    for other_plan in other_plans:\n",
     "        \n",
-    "        agent_j = other_plan[0][0][0]   # AgentAt1\n",
     "        # Pads the shortest plan with copies of the last atom representation (agent still on the goal cell)\n",
     "        plan, other_plan = match_length(plan, other_plan)   \n",
     "        for j in range(len(plan)):\n",
     "            if plan[j][0][1] == other_plan[j][0][1] or plan[j][1][1] == other_plan[j][1][1]:\n",
-    "                conflicts.append((agent_i, agent_j, (plan[j][0][1], plan[j][1][1]), j))\n",
+    "                constraints.append(Constraint(agent=agent_i, loc_from=(plan[j-1][0][1], plan[j-1][1][1]), loc_to=(plan[j][0][1], plan[j][1][1]), time=j))\n",
     "\n",
-    "    return conflicts    # [(a0, ai, v, t), ..., (a0, aj, v, t)]"
+    "\n",
+    "\n",
+    "    return constraints    # [(a0, ai, v, t), ..., (a0, aj, v, t)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('AgentAt0', 'AgentAt0', ((1, 7), (2, 10)), 0),\n",
-       " ('AgentAt0', 'AgentAt0', ((1, 6), (2, 10)), 1)]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AgentAt0\n",
+      "((2, 6), (2, 10))\n",
+      "((1, 6), (2, 10))\n",
+      "1\n"
+     ]
     }
    ],
    "source": [
-    "validate(plan0, plans)"
+    "checks = validate(plan0, plans)\n",
+    "\n",
+    "print(checks[0].agent)\n",
+    "print(checks[0].loc_from)\n",
+    "print(checks[0].loc_to)\n",
+    "print(checks[0].time)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_joint_action(plans):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def plans_from_states(initial_states):\n",
+    "\n",
+    "            plans = []\n",
+    "            plans_repr = []\n",
+    "\n",
+    "            for num, initial_state in enumerate(initial_states):\n",
+    "\n",
+    "                frontier = None\n",
+    "                if args.bfs:\n",
+    "                    frontier = FrontierBFS()\n",
+    "                elif args.dfs:\n",
+    "                    frontier = FrontierDFS()\n",
+    "                elif args.astar:\n",
+    "                    frontier = FrontierBestFirst(HeuristicAStar(initial_state))\n",
+    "                elif args.wastar:\n",
+    "                    frontier = FrontierBestFirst(HeuristicWeightedAStar(initial_state, args.wastar))\n",
+    "                elif args.greedy:\n",
+    "                    frontier = FrontierBestFirst(HeuristicGreedy(initial_state))\n",
+    "                elif args.bfws:\n",
+    "                    frontier = FrontierBestFirstWidth(HeuristicBFWS(initial_state))\n",
+    "                else:\n",
+    "                    # Default to BFS search.\n",
+    "                    frontier = FrontierBFS()\n",
+    "                    print('Defaulting to BFS search. Use arguments -bfs, -dfs, -astar, -wastar, or -greedy to set the search strategy.', file=sys.stderr, flush=True)            \n",
+    "                plan, plan_repr = search(initial_state, frontier)\n",
+    "                plans.append(plan) \n",
+    "                plans_repr.append(plan_repr)\n",
+    "                print(\"Ended search for initial state number\", num)\n",
+    "                print()\n",
+    "                print(\"Plan extracted:\")\n",
+    "                print(plan)\n",
+    "                print(plan_repr)\n",
+    "                print()\n",
+    "                return plans, plans_repr\n",
+    "\n",
+    "class Node():\n",
+    "\n",
+    "    def __init__(self, states):\n",
+    "        self.initial_states = states\n",
+    "        self.constraints = [state.constraints for state in self.initial_states]\n",
+    "        self.plans, self.paths = plans_from_states(self.initial_states)\n",
+    "        self.cost = len(max(self.plans)) # length of longest solution\n",
+    "\n",
+    "def CBS(initial_states):\n",
+    "\n",
+    "    root = Node(initial_states)\n",
+    "    open = set()\n",
+    "    open.add(root)\n",
+    "\n",
+    "    while open:\n",
+    "        P = min(open, key=lambda x: x.cost)\n",
+    "        C = set()\n",
+    "\n",
+    "        for path in P.paths:\n",
+    "            C.add(validate(path, P.paths))      # C is the set of constraints. Here we add the constraints for each path\n",
+    "\n",
+    "        if len(C) < 1:\n",
+    "            solution = to_joint_action(P.plans)\n",
+    "            return solution       # Found solution\n",
+    "        \n",
+    "        for constraint_set in C:                # Iter through each constraint set (the n of constraints after the validation of a single path)\n",
+    "            A = Node(initial_states)            # Initialize node\n",
+    "            A.constraints = P.constraints + constraint_set  \n",
+    "            A.plans, A.paths = plans_from_states(A.initial_states)\n",
+    "            A.cost = len(max(A.plans))\n",
+    "            open.add(A)\n",
+    "            \n",
+    "\n",
+    "\n"
    ]
   }
  ],
