--- a/searchclient/searchclient_python/searchclient/smth.ipynb
+++ b/searchclient/searchclient_python/searchclient/smth.ipynb
@@ -59,8 +59,6 @@
     "            if plan[j][0][1] == other_plan[j][0][1] or plan[j][1][1] == other_plan[j][1][1]:\n",
     "                constraints.append(Constraint(agent=agent_i, loc_from=(plan[j-1][0][1], plan[j-1][1][1]), loc_to=(plan[j][0][1], plan[j][1][1]), time=j))\n",
     "\n",
-    "\n",
-    "\n",
     "    return constraints    # [(a0, ai, v, t), ..., (a0, aj, v, t)]"
    ]
   },
@@ -87,16 +85,6 @@
     "print(checks[0].loc_from)\n",
     "print(checks[0].loc_to)\n",
     "print(checks[0].time)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def to_joint_action(plans):\n",
-    "    pass"
    ]
   },
   {
@@ -164,8 +152,8 @@
     "            C.add(validate(path, P.paths))      # C is the set of constraints. Here we add the constraints for each path\n",
     "\n",
     "        if len(C) < 1:\n",
-    "            solution = to_joint_action(P.plans)\n",
-    "            return solution       # Found solution\n",
+    "            solution = [list(x) for x in zip(*P.plans)] \n",
+    "            return solution       # Found solution, return solution in joint action normal form\n",
     "        \n",
     "        for constraint_set in C:                # Iter through each constraint set (the n of constraints after the validation of a single path)\n",
     "            A = Node(initial_states)            # Initialize node\n",
