First try of a separate cbs.py, moved most of the routine from searchclient

--- a/searchclient/searchclient_python/searchclient/smth.ipynb
+++ b/searchclient/searchclient_python/searchclient/smth.ipynb
@@ -59,7 +59,7 @@
     "            if plan[j][0][1] == other_plan[j][0][1] or plan[j][1][1] == other_plan[j][1][1]:\n",
     "                constraints.append(Constraint(agent=agent_i, loc_from=(plan[j-1][0][1], plan[j-1][1][1]), loc_to=(plan[j][0][1], plan[j][1][1]), time=j))\n",
     "\n",
-    "    return constraints    # [(a0, ai, v, t), ..., (a0, aj, v, t)]"
+    "    return constraints    # [ConstraintObject0, ..., ConstraintObjectn]"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "checks = validate(plan0, plans)\n",
     "\n",
     "print(checks[0].agent)\n",
-    "print(checks[0].loc_from)\n",
+    "print(checks[0].loc_from)       # Still don't think we need this\n",
     "print(checks[0].loc_to)\n",
     "print(checks[0].time)\n"
    ]
