--- a/searchclient/searchclient_python/searchclient/recycling_bin.ipynb
+++ b/searchclient/searchclient_python/searchclient/recycling_bin.ipynb
@@ -13,12 +13,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import io\n",
     "import cProfile\n",
     "from frontier import FrontierBFS, FrontierDFS, FrontierBestFirst, FrontierBestFirstWidth\n",
     "from heuristic import HeuristicAStar, HeuristicWeightedAStar, HeuristicGreedy, HeuristicBFWS\n",
-    "from graphsearch import search\n"
+    "from graphsearch import search"
    ]
   },
   {
@@ -146,7 +145,7 @@
    "source": [
     "# Search for a plan.\n",
     "print('Starting {}.'.format(frontier.get_name()), file=sys.stderr, flush=True)\n",
-    "plan = search(initial_state, frontier)\n"
+    "plan = search(initial_state, frontier)"
    ]
   },
   {
