--- a/searchclient/searchclient_python/searchclient/smth.ipynb
+++ b/searchclient/searchclient_python/searchclient/smth.ipynb
@@ -64,17 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AgentAt0\n",
-      "((2, 6), (2, 10))\n",
-      "((1, 6), (2, 10))\n",
-      "1\n"
+     "ename": "NameError",
+     "evalue": "name 'validate' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m checks \u001b[38;5;241m=\u001b[39m \u001b[43mvalidate\u001b[49m(plan0, plans)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(checks[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39magent)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(checks[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mloc_to)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'validate' is not defined"
      ]
     }
    ],
@@ -82,7 +83,6 @@
     "checks = validate(plan0, plans)\n",
     "\n",
     "print(checks[0].agent)\n",
-    "print(checks[0].loc_from)       # Still don't think we need this\n",
     "print(checks[0].loc_to)\n",
     "print(checks[0].time)\n"
    ]
